
(library 
  (name aslp_common)
  (public_name aslp_client_server_ocaml.aslp_common)
  (modules common)
  (libraries lwt.unix )
  )

(library
 (name server)
 (public_name aslp_client_server_ocaml.aslp_server)
 (modules server)
 (flags (-w -27))
 (libraries aslp_common asli.libASL aslp_offline.pc_aarch64 lwt.unix mtime mtime.clock aches.vache)
 )

(library
 (name client)
 (public_name aslp_client_server_ocaml.aslp_client)
 (modules client)
 (libraries aslp_common asli.libASL lwt.unix mtime mtime.clock)
)

